# online-code-checker

./: .gitignore  Cargo.toml  README.md  build.rs  check.sh  database.sqlite  online_code_checker_config.toml  shell.nix
.sqlx/: query-1eb70c0435ec7a99b8c90e7816cab321b9038b2a94b62692b11d42c7e3e83975.json  query-3b4bd70c38a26e98cec97763413bdb9f02b9e687fe68b928b37d1956a08156cf.json  query-3e3879585d4169c3f16cec7cc03220a8d5fd85e053e9848a61b5c1fcdec6bdc8.json  query-4c82fd2cc8081d4efefc165ac0873f6e791b7a28d965a2f13cb24e03ab7abf0c.json  query-4cf0644495bc5bcef9a06897d23179a8c65b7fca115f505e713f288e5334d636.json  query-5246e0eeefaf43bde93ebe73e41780b05a3bd743737eaae0b03efaf24c2a2a55.json  query-57a4645d8da29c0400e8ada8e382ab0ce207f9791ed8d6ec214d62b1f54c6cb5.json  query-592d76710594143f97d0aefc36aa85672a91c037a47a67dee7fbe4d913e8b5ba.json  query-651326b0041ffb336e4bafe03e6ca56f4a0fc8102c226fe2ae231df309c6a613.json  query-846a36a7a8b9167988e50487195741c1493c0bcd7f449f13058abedc8f551cb9.json  query-86d9154ff359e925b1f73ba4be620d309230f7d3f37c4d710f25f5acffd2527b.json  query-8b1725e83af86631fc3079311f9196ae48f8b694591219bc0c56726cf9d28dd6.json  query-8bc4f329b189529cc3ce8608f45e6bf6fd1f7367e6a85101add8b506106f2276.json  query-8fac9306a4a2b6dea6ed9a681c5d180fa642cc6a74cd04874b1a31620edbfb4f.json  query-aa151f497d8d8e66fdf737ec030f2af37aa8aedcefc51909256ee2ba43817249.json  query-bec54623a260b9d71282d124ec1692eb6bea94439ecfb2bac83c61a936083a83.json  query-c6c093ea11c8a2ed436ff15c00c3920a5c74d65e1a7c1a216faa1c88a6afda52.json  query-d68deb146522fe22e1d8092f917d0c44e1202e9676129bc1623753ca3ce0f81e.json  query-e45db42b8a406db65b4f8999003bbf5e1dfb1e522312249f5890d41799fec0fd.json
migrations/: 20240423085341_initial.sql  20240514120545_create-user-table.sql  20240514143758_user-info.sql  20240514234209_solutions.sql  (+3 more)
(+53 files in other folders)
