[package]
name = "online-code-checker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
async-trait = "0.1.80"
axum = "0.7.5"
axum-extra = { version = "0.9.3", features = ["cookie", "typed-header"] }
axum-login = "0.15.1"
axum-messages = "0.6.1"
bytesize = { version = "1.3.0", features = ["serde"] }
once_cell = "1.19.0"
password-auth = "1.0.0"
serde = { version = "1.0.198", features = ["derive"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "sqlite" ] }
thiserror = "1.0.60"
time = "0.3.36"
tokio = { version = "1.37.0", features = ["full"] }
toml = "0.8.12"
tower-http = { version = "0.5.2", features = ["trace"] }
tower-sessions = { version = "0.12.0", default-features = false, features = [
    "signed",
] }
tower-sessions-sqlx-store = { version = "0.12.0", features = ["sqlite"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.8.0", features = ["v4", "v7"] }
